--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -37,7 +37,7 @@
 \input{sections/taylor_mode_forward_laplacian.tex}
 
 \section{Fokker-Planck}\label{app:fokker-planck}
-\input{paper/sections/fokker_planck}
+\input{sections/fokker_planck.tex}
 
 %\section{Derivation of KFAC general PDEs}\label{app:generalPDEs}
 %\input{paper/sections/general_PDEs}
