Update on Overleaf.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -152,6 +152,23 @@
   publisher =    {Wiley Online Library}
 }
 
+@article{hu2024score,
+  title={Score-Based Physics-Informed Neural Networks for High-Dimensional Fokker-Planck Equations},
+  author={Hu, Zheyuan and Zhang, Zhongqiang and Karniadakis, George Em and Kawaguchi, Kenji},
+  journal={arXiv preprint arXiv:2402.07465},
+  year={2024}
+}
+
+@article{wang20222,
+  title={Is $ L\^{} 2$ Physics Informed Loss Always Suitable for Training Physics Informed Neural Network?},
+  author={Wang, Chuwei and Li, Shanda and He, Di and Wang, Liwei},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={8278--8290},
+  year={2022}
+}
+
+
 @article{lagaris1998artificial,
   title =        {Artificial neural networks for solving ordinary and partial
                   differential equations},
