--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -39,6 +39,9 @@
 \section{Fokker-Planck}\label{app:fokker-planck}
 \input{sections/fokker_planck.tex}
 
+\section{Ideas}\label{app:ideas}
+\input{sections/preconditioned_hessian_free.tex}
+
 %\section{Derivation of KFAC general PDEs}\label{app:generalPDEs}
 %\input{paper/sections/general_PDEs}
 
