[TEX] Add visualizations for 2d Poisson and 1+1d heat

--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -25,6 +25,8 @@ group-minimum-digits={3}%
 % FIGURES & COLORS
 % ===================================================================
 \usepackage{subcaption} % \subfigure environment
+\usepackage{tabularx} % tables with automatic line break
+\usepackage{ragged2e} % \Centering command to vertically center table cells
 \captionsetup[subfigure]{% subfigure captions are left-aligned
   justification=justified,%
   singlelinecheck=false,%
