--- a/paper/sections/taylor_mode_forward_laplacian.tex
+++ b/paper/sections/taylor_mode_forward_laplacian.tex
@@ -369,7 +369,7 @@ As mentioned in \Cref{sec:taylor-mode-tutorial}, this requires a generalization 
   \left[
   \otimes_{\eta \in \sigma} \partial^{|\eta|}h(\vx) \left[ \otimes_{l \in \eta} \vv_l \right]
   \right]
-  %\\ & 
+  %\\ &
   %= \sum_{\lvert\alpha\rvert = K}
   %\partial^{\alpha}g(h(\vx))
   %\vv^\alpha
@@ -470,7 +470,7 @@ As shown in \Cref{subeq:taylor-mode-multi-directional-1-2}, for both \Cref{eq:ta
   \begin{align}
     f(\vx)
     &=
-      g(\h(\vx))\,,
+      g(h(\vx))\,,
     \\
     \partial f(\vx) [\ve_i]
     &=
@@ -489,7 +489,7 @@ As shown in \Cref{subeq:taylor-mode-multi-directional-1-2}, for both \Cref{eq:ta
   \begin{align}
     f(\vx)
     &=
-      \sigma(\h(\vx))\,,
+      \sigma(h(\vx))\,,
     \\
     \partial f(\vx) [\ve_i]
     &=
