[ADD] Results on 9+1d log-FP with random search

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -36,7 +36,7 @@
 \section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}\label{app:taylor-mode-tutorial}
 \input{sections/taylor_mode_forward_laplacian.tex}
 
-\section{Fokker-Planck}\label{app:fokker-planck}
+\section{Fokker-Planck Equation}\label{app:fokker-planck}
 \input{sections/fokker_planck.tex}
 
 \section{Ideas}\label{app:ideas}
